--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-firebase/storage": "^23.5.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@sentry/react-native": "^8.0.0",
     "lottie-react-native": "^7.3.4",
     "react": "18.3.1",
     "react-native": "0.76.0",
